--- a/.github/workflow/hello.yml
+++ b/.github/workflow/hello.yml
@@ -1,4 +1,4 @@
-name: Hello world world
+name: Hello World Workflow
 
 on: 
   push:
@@ -10,30 +10,21 @@ on:
   workflow_dispatch:
 
 jobs:
-
   hello_world_job:  
-
     runs-on: ubuntu-latest
-
     steps:
-      - name: Hello world checkout
+      - name: Checkout repository
         uses: actions/checkout@v3 
 
-      - name: run Hello world 
-        run: echo "Hello world"
-        shell: bash
+      - name: Run Hello World
+        run: echo "Hello World"
 
   goodbye_world_job: 
-
     runs-on: ubuntu-latest
-    
     needs: hello_world_job
-
     steps:
-      - name: Goodbye world checkout
+      - name: Checkout repository
         uses: actions/checkout@v3 
 
-      - name: run Goodbye world 
-        run: echo "Goodbye world"
-        shell: bash
-
+      - name: Run Goodbye World
+        run: echo "Goodbye World"
